--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Spatial by TEMPLATED
+	Learning by Todd Young
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
