--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Todd Young Learning</h2>
-				<p>Lorem ipsum dolor sit amet nullam consequat <br /> interdum vivamus donce sed libero.</p>
+				<h2>Research Blog</h2>
+				<p>Learning Machine Learning </p>
 				<ul class="actions">
 					<li><a href="#" class="button special big">Get Started</a></li>
 				</ul>
