Updating about section.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="row 200%">
 							<div class="6u 12u$(medium)">
 								<header class="major">
-									<h2>Interests</h2>
+									<h2>About</h2>
 									<p>Perspiciatis doloremque recusandae dolor</p>
 								</header>
 							</div>
