Updating about subheader.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<div class="6u 12u$(medium)">
 								<header class="major">
 									<h2>About</h2>
-									<p>Perspiciatis doloremque recusandae dolor</p>
+									<p>Statistics student at the University of Tennessee</p>
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
