--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Research Blog</h2>
-				<p>Learning Machine Learning </p>
+				<h2>Learning Machine Learning</h2>
+				<p>Research Blog </p>
 			</section>
 
 			<!-- One -->
