--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Learning Machine Learning</h2>
-				<p>Research Blog </p>
+				<p>A Research Blog </p>
 			</section>
 
 			<!-- One -->
