--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="blog.html">Blog</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="organizations.html">Organizations</a></li>
 					</ul>
 				</nav>
 			</header>
