--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 				<div class="container">
 					<ul class="icons">
 						<li><a href="#" class="icon fa-github"></a></li>
-						<li><a href="#" class="icon fa-twitter"></a></li>
+						<li><a href="http://twitter.com/YoungMTodd" class="icon fa-twitter"></a></li>
 						<li><a href="#" class="icon fa-instagram"></a></li>
 					</ul>
 					<ul class="copyright">
