--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 					<ul class="icons">
 						<li><a href="#" class="icon fa-github"></a></li>
 						<li><a href="http://twitter.com/YoungMTodd" class="icon fa-twitter"></a></li>
-						<li><a href="#" class="icon fa-instagram"></a></li>
+						<li><a href="http://www.instagram.com/_toddyoung/?hl=en" class="icon fa-instagram"></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Todd Young</li>
