--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Todd Young | ML</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="keywords" content="Home page,Todd,Young,Todd Young,toddyoung, ML" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="landing">
