--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="keywords" content="Home page,Todd,Young,Todd Young,toddyoung, ML" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" href="favicon.ico" /> 
 	</head>
 	<body class="landing">
 
