--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="keywords" content="Home page,Todd,Young,Todd Young,toddyoung, ML" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 	</head>
 	<body class="landing">
 
