--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Spatial by TEMPLATED</title>
+		<title>Todd Young | Blog </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,12 +15,12 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><strong><a href="index.html">Spatial</a></strong> by Templated</h1>
+				<h1><strong><a href="index.html">Blog</a></strong> </h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="research.html">Research</a></li>
+						<li><a href="organizations.html">Organizations</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -48,9 +48,9 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook"></a></li>
-						<li><a href="#" class="icon fa-twitter"></a></li>
-						<li><a href="#" class="icon fa-instagram"></a></li>
+						<li><a href="http://github.com/Young-Todd" class="icon fa-github"></a></li>
+						<li><a href="http://twitter.com/YoungMTodd" class="icon fa-twitter"></a></li>
+						<li><a href="http://www.instagram.com/_toddyoung/?hl=en" class="icon fa-instagram"></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li>
