--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
 						<li><a href="http://www.instagram.com/_toddyoung/?hl=en" class="icon fa-instagram"></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li>
+						<li>&copy; Todd Young</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
 						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
 					</ul>
