--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><strong><a href="index.html">Blog</a></strong> </h1>
+				<h1><strong><a href="index.html">Learning ML</a></strong> Todd Young</h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
