--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
 				<div class="container">
 
 					<header class="major special">
-						<h2>Generic</h2>
+						<h2>Blog</h2>
 						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 					</header>
 
