--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
 					<ul class="copyright">
 						<li>&copy; Todd Young</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="https://xkcd.com/435/">XKCD</a></li>
+						<li>Image: <a href="https://xkcd.com/435/">XKCD</a></li>
 					</ul>
 				</div>
 			</footer>
