--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="research.html">Research</a></li>
+						<li><a href="blog.html">Blog</a></li>
 						<li><a href="organizations.html">Organizations</a></li>
 					</ul>
 				</nav>
