--- a/research.html
+++ b/research.html
@@ -19,6 +19,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
+						<li><a href="research.html">Research</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="organizations.html">Organizations</a></li>
 					</ul>
