--- a/organizations.html
+++ b/organizations.html
@@ -33,7 +33,7 @@
 				<div class="container">
 
 					<header class="major special">
-						<h2>Research</h2>
+						<h2>Organizations</h2>
 						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 					</header>
 
