--- a/organizations.html
+++ b/organizations.html
@@ -34,7 +34,7 @@
 
 					<header class="major special">
 						<h2>Organizations</h2>
-						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+						<p>What we do when our models are fitting</p>
 					</header>
 
 					<a href="http://xkcd.com/303/" class="image fit"><img src="images/compiling.jpg" alt="XKCD" class="caption">XKCD</ /></a>
