--- a/organizations.html
+++ b/organizations.html
@@ -56,7 +56,7 @@
 					<ul class="copyright">
 						<li>&copy; Todd Young</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Image: <a href="http://xkcd.com/303/">XKCD: What If?</a></li>
+						<li>Image: <a href="http://xkcd.com/303/">XKCD</a></li>
 					</ul>
 				</div>
 			</footer>
