--- a/research.html
+++ b/research.html
@@ -56,7 +56,7 @@
 					<ul class="copyright">
 						<li>&copy; Todd Young</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="https://what-if.xkcd.com/76/">XKCD: What If?</a></li>
+						<li>Image: <a href="https://what-if.xkcd.com/76/">XKCD: What If?</a></li>
 					</ul>
 				</div>
 			</footer>
