--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="http://github.com/Young-Todd" class="icon fa-github"></a></li>
+						<li><a href="https://github.com/yngtodd" class="icon fa-github"></a></li>
 						<li><a href="http://twitter.com/YoungMTodd" class="icon fa-twitter"></a></li>
 						<li><a href="http://www.instagram.com/_toddyoung/?hl=en" class="icon fa-instagram"></a></li>
 					</ul>
