--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
 				<div class="container">
 
 					<header class="major special">
-						<h3>Blog</h3>
+						<h2>Blog</h2>
 						<p>Collection of notes.</p>
 					</header>
 
@@ -42,11 +42,11 @@
 					<p>Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan commodo odio cubilia ac eu interdum placerat placerat arcu commodo lobortis adipiscing semper ornare pellentesque.</p>
 					<p>Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet blandit adipiscing arcu ante.</p>
 
-					<header class="major special">
+					<header>
 						<h4>Reinforcement learning</h4>
-						<p>Notes on reinforcement learning <a href="https://yngtodd.github.io/blog/">RL</a></p>
+						<p>Notes on <a href="https://yngtodd.github.io/blog/">RL</a></p>
 					</header>
-					
+
 				</div>
 			</section>
 
