--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
 
 					<header class="major special">
 						<h2>Blog</h2>
-						<p>A collection of notes.</p>
+						<p>Notes on the ideas we stumble upon.</p>
 					</header>
 
 					<a href="https://xkcd.com/1347/" class="image fit"><img src="images/t_distribution.png" alt="XKCD" class="caption">XKCD</ /></a>
