--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
 
 					<header>
 						<h4>Reinforcement learning</h4>
-						<p>Notes on <a href="https://yngtodd.github.io/blog/">RL</a></p>
+						<p>Notes on <a href="/blog_posts/rl_toc.hmtl">RL</a></p>
 					</header>
 
 				</div>
