--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
 
 					<header>
 						<h4>Reinforcement learning</h4>
-						<p>Notes on <a href="blog/posts/rl_toc.html">RL</a></p>
+						<p>Notes on <a href="/posts/rl_toc.html">RL</a></p>
 					</header>
 
 				</div>
