--- a/rl/elements.html
+++ b/rl/elements.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Todd Young | Blog </title>
+		<title>Todd Young | RL </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/blog/assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><strong><a href="/blog/index.html">Learning ML</a></strong> Todd Young</h1>
+				<h1><strong><a href="index.html">Learning ML</a></strong> Todd Young</h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="/blog/index.html">Home</a></li>
@@ -33,18 +33,18 @@
 				<div class="container">
 
 					<header class="major special">
-						<h2>Blog</h2>
-						<p>Notes on the ideas we stumble upon.</p>
+						<h2>Elements of Reinforcement Learning</h2>
+						<p>Policies and Rewards</p>
 					</header>
 
-					<a href="https://xkcd.com/1347/" class="image fit"><img src="images/t_distribution.png" alt="XKCD" class="caption">XKCD</ /></a>
-					<p>Sometimes it is good to have a map to remind you where you have where you have gone.
-					   Here is a collection of notes about the ideas I have stumbled upon.</p>
-
-					<header>
-						<h4>Reinforcement learning</h4>
-						<p><a href="/blog/rl/rl_toc.html">RL</a>: games, plans, rewards, and robots.</p>
-					</header>
+					<a href="https://xkcd.com/1881/" class="image fit"><img src="/blog/images/drone_training.png" alt="XKCD" class="caption">XKCD</ /></a>
+					<p>Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan
+						blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo.
+						Interdum ante aliquet commodo accumsan vis phasellus adipiscing.
+						Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor.
+						Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent.
+						Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer.
+						Accumsan euismod nunc adipiscing lacinia erat ut sit. </p>
 
 				</div>
 			</section>
@@ -60,7 +60,7 @@
 					<ul class="copyright">
 						<li>&copy; Todd Young</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Image: <a href="https://xkcd.com/1347/">XKCD</a></li>
+						<li>Image: <a href="https://xkcd.com/1881/">XKCD</a></li>
 					</ul>
 				</div>
 			</footer>
