--- a/rl/rl_toc.html
+++ b/rl/rl_toc.html
@@ -48,7 +48,7 @@
 
 					<header>
 						<h5>Elements of Reinforcement Learning</h5>
-						<p>Policies and Rewards</p>
+						<p><a href"/elements.html">1.< Policies and Rewards</p>
 					</header>
 
 				</div>
