--- a/rl/rl_toc.html
+++ b/rl/rl_toc.html
@@ -48,7 +48,7 @@
 
 					<header>
 						<h5>Elements of Reinforcement Learning</h5>
-						<p><a href="/elements.html">1.</a> Policies and Rewards</p>
+						<p><a href="/blog/rl/elements.html">1.</a> Policies and Rewards</p>
 					</header>
 
 				</div>
