update banner credits

--- a/elements.html
+++ b/elements.html
@@ -396,7 +396,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="copyright">
 						<li>&copy; Untitled</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>Image: <a href="https://en.wikipedia.org/wiki/Les_Alyscamps">Van Gogh</a></li>
 					</ul>
 				</div>
 			</footer>
