--- a/rl/elements.html
+++ b/rl/elements.html
@@ -37,6 +37,10 @@
 						<p>Policies and Rewards</p>
 					</header>
 
+					<dt-article>
+					  <h1>Hello World</h1>
+					</dt-article>
+
 					<a href="https://xkcd.com/1881/" class="image fit"><img src="/blog/images/drone_training.png" alt="XKCD" class="caption">XKCD</ /></a>
 					<p>Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan
 						blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo.
@@ -66,6 +70,7 @@
 			</footer>
 
 		<!-- Scripts -->
+			<script src="https://distill.pub/template.v1.js"></script>
 			<script src="/blog/assets/js/jquery.min.js"></script>
 			<script src="/blog/assets/js/skel.min.js"></script>
 			<script src="/blog/assets/js/util.js"></script>
