--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 					<ul class="copyright">
 						<li>&copy; Todd Young</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="https://en.wikipedia.org/wiki/Les_Alyscamps">Van Gogh</a></li>
+						<li>Image: <a href="https://en.wikipedia.org/wiki/Les_Alyscamps">Van Gogh</a></li>
 					</ul>
 				</div>
 			</footer>
