--- a/rl/elements.html
+++ b/rl/elements.html
@@ -39,7 +39,7 @@
 				</div>
 			</section>
 
-			<script src="../dist/template.js"></script>
+			<script src="/blog/dist/template.js"></script>
 
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384-wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous">
 
