--- a/rl/rl_toc.html
+++ b/rl/rl_toc.html
@@ -49,6 +49,7 @@
 					<header>
 						<h5>Elements of Reinforcement Learning</h5>
 						<p><a href="/blog/rl/elements.html">1.</a> Policies and Rewards</p>
+						<p><a href="/blog/rl/test.html">2.</a> Distill Test</p>
 					</header>
 
 				</div>
