--- a/rl/elements.html
+++ b/rl/elements.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><strong><a href="index.html">Learning ML</a></strong> Todd Young</h1>
+				<h1><strong><a href="/blog/index.html">Learning ML</a></strong> Todd Young</h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="/blog/index.html">Home</a></li>
